# Brandpulse-ai

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
,github/workflows/: cicd.yml
.github/workflows/: ci.yml  deploy.yml
frontend/: index.html
frontend/static/css/: retro.css
frontend/static/js/: api.js  app.js
src/agents/: __init__.py  graph.py  nodes.py  state.py
src/analysis/: cache.py  sentiment_analyzer.py
src/api/: main.py  schemas.py
src/api/routers/: alerts.py  analysis.py  brands.py  results.py
src/data/collectors/: __init__.py  base_collector.py  hackernews_collector.py  reddit_collector.py  youtube_collector.py
src/database/: models.py  session.py
src/utils/: config.py  logger.py
tests/: conftest.py  test_api.py  test_collectors.py  test_config.py  test_nodes.py  test_sentiment_analyzer.py
