[project]
name = "brandpulse-ai"
version = "0.2.0"
description = "Agentic brand intelligence platform powered by LLMs and LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ── Database (async SQLite) ────────────────────────────────────────────────
    "sqlalchemy>=2.0.0",

    # ── Data collection ────────────────────────────────────────────────────────
    "asyncpraw>=7.7.0",
    "google-api-python-client>=2.184.0",
    "httpx>=0.27.0",              # HackerNews + async HTTP

    # ── LLM / Agentic stack ───────────────────────────────────────────────────
    "groq>=0.11.0",               # direct Groq client — used by SentimentAnalyzer
    "openai>=1.0.0",              # Cerebras fallback (OpenAI-compatible API)
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff==0.15.5",
    "mypy>=1.10.0",
]
